Add a link (wrong link for now) from object description

--- a/nettutstilling.html
+++ b/nettutstilling.html
@@ -31,7 +31,7 @@
     <div class="column"> <!--column to the left, from top to buttom-->
         <div class="container1" style="position: relative; text-align: center; color: white;">
             <img src="4.jpg" alt="description" style="width:100%"> 
-            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px">img4</div>
+            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="index.html">img4</a></div> <!--can insert a link on the description to start a new page about the object-->
         </div>
         <div class="container2" style="position: relative; text-align: center; color: red;">
             <img src="2.jpg" alt="description" style="width:100%">
