Danne egne nettsider til alle gjenstandene på nettutstilling.html

--- a/gjenstand1.html
+++ b/gjenstand1.html
@@ -23,20 +23,20 @@
 </div>
 <hr>
 
-<!--content-->
-<h2>Kontakt</h2>
-<h3>Telefon nummer</h3>
-<p>+47 3663 6336</p>
-<br>
-<h3>Epost</h3>
-<p>post@tussudalbygemuseum.no</p>
-<br>
-<h3>Adresse</h3>
-<p>Tussudal Gate 36, 6363 Trondheim</p> 
-<p><a href="https://www.google.com/maps/@63.4339642,10.3422412,16.33z" target="_blank">Her får du kartet.</a></p>
-<br>
+<h2>Gjenstand 1</h2>
+<img src="1.jpg" alt="gjenstand1" style="width: 50%;">
+<form>
+    <br>
+    <label for="comment1">Kommentar: </label>
+    <br>
+    <textarea id="comment1" name="comment1" rows="5" cols="50" required>Skriv inn kommentar</textarea>
+    <br>
+    <input type="submit" value="submit">
+</form>
 
-<br><br><br><br><br><br><br><br><br><br><br>
+
+
+</body>
 
 <div id="footer">
     <hr>
