--- a/nettutstilling.html
+++ b/nettutstilling.html
@@ -29,39 +29,39 @@
 <!--in order to add description in each picture, every picture has its own container-->
 <div class="row"> 
     <div class="column"> <!--column to the left, from top to buttom-->
-        <div class="container1" style="position: relative; text-align: center; color: white;">
+        <div class="container1" style="position: relative; text-align: center;">
             <img src="4.jpg" alt="description" style="width:100%"> 
-            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="index.html">img4</a></div> <!--can insert a link on the description to start a new page about the object-->
+            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand1.html" target="_blank" style="color: white;">Gjenstand 1</a></div> <!--can insert a link on the description to start a new page about the object-->
         </div>
-        <div class="container2" style="position: relative; text-align: center; color: red;">
+        <div class="container2" style="position: relative; text-align: center;">
             <img src="2.jpg" alt="description" style="width:100%">
-            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px">img2</div>
+            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand2.html" target="_blank" style="color: white;">Gjenstand 2</a></div>
         </div>
-        <div class="container1" style="position: relative; text-align: center; color: white;">
-            <img src="3.jpg" alt="description" style="width:100%"> 
-            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px">img3</div>
+        <div class="container1" style="position: relative; text-align: center;">
+            <img src="3.jpg" alt="description" style="width:100%"> "
+            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand3.html" target="_blank" style="color: white;">Gjenstand 3</a></div>
         </div>
-        <div class="container2" style="position: relative; text-align: center; color: red;">
+        <div class="container2" style="position: relative; text-align: center;">
             <img src="1.jpg" alt="description" style="width:100%">
-            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px">img1</div>
+            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand4.html" target="_blank" style="color: white;">Gjenstand 4</a></div>
         </div>
     </div>
     <div class="column"> <!--column to the right, from top to buttom-->
-        <div class="container1" style="position: relative; text-align: center; color: white;">
+        <div class="container1" style="position: relative; text-align: center;">
             <img src="2.jpg" alt="description" style="width:100%"> 
-            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px">img2</div>
+            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand5.html" target="_blank" style="color: white;">Gjenstand 5</a></div>
         </div>
-        <div class="container2" style="position: relative; text-align: center; color: red;">
+        <div class="container2" style="position: relative; text-align: center;">
             <img src="1.jpg" alt="description" style="width:100%">
-            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px">img1</div>
+            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand6.html" target="_blank" style="color: white;">Gjenstand 6</a></div>
         </div>
-        <div class="container1" style="position: relative; text-align: center; color: white;">
+        <div class="container1" style="position: relative; text-align: center;">
             <img src="3.jpg" alt="description" style="width:100%"> 
-            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px">img3</div>
+            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand7.html" target="_blank" style="color: white;">Gjenstand 7</a></div>
         </div>
-        <div class="container2" style="position: relative; text-align: center; color: red;">
+        <div class="container2" style="position: relative; text-align: center;">
             <img src="4.jpg" alt="description" style="width:100%">
-            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px">img4</div>
+            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand8.html" target="_blank" style="color: white;">Gjenstand 8</a></div>
         </div>
     </div>
 </div>
