Oppdatering på gjenstandenes egne nettsider

--- a/gjenstand2.html
+++ b/gjenstand2.html
@@ -24,7 +24,8 @@
 <hr>
 
 <h2>Gjenstand 2</h2>
-<img src="2.jpg" alt="gjenstand2" style="width: 50%;">
+<img src="g2.jpg" alt="gjenstand2" style="width: 50%;">
+<p style="padding-left: 10%; padding-right: 10%;">beskrivelse...</p>
 <form>
     <br>
     <label for="comment2">Kommentar: </label>
