--- a/nettutstilling.html
+++ b/nettutstilling.html
@@ -38,7 +38,7 @@
             <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand2.html" target="_blank" style="color: white;">Gjenstand 2</a></div>
         </div>
         <div class="container1" style="position: relative; text-align: center;">
-            <img src="3.jpg" alt="description" style="width:100%"> "
+            <img src="3.jpg" alt="description" style="width:100%">
             <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand3.html" target="_blank" style="color: white;">Gjenstand 3</a></div>
         </div>
         <div class="container2" style="position: relative; text-align: center;">
