--- a/gjenstand1.html
+++ b/gjenstand1.html
@@ -24,7 +24,8 @@
 <hr>
 
 <h2>Gjenstand 1</h2>
-<img src="1.jpg" alt="gjenstand1" style="width: 50%;">
+<img src="g1.jpg" alt="gjenstand1" style="width: 50%;">
+<p style="padding-left: 10%; padding-right: 10%;">beskrivelse...</p>
 <form>
     <br>
     <label for="comment1">Kommentar: </label>
