--- a/gjenstand3.html
+++ b/gjenstand3.html
@@ -24,7 +24,8 @@
 <hr>
 
 <h2>Gjenstand 3</h2>
-<img src="3.jpg" alt="gjenstand3" style="width: 50%;">
+<img src="g3.jpg" alt="gjenstand3" style="width: 50%;">
+<p style="padding-left: 10%; padding-right: 10%;">beskrivelse...</p>
 <form>
     <br>
     <label for="comment3">Kommentar: </label>
