Legg til innhold i åpningstider_og_omvisning.html

--- a/aapningstid_og_omvisning.html
+++ b/aapningstid_og_omvisning.html
@@ -24,14 +24,17 @@
 <hr>
 
 <h2>Åpningstider</h2>
-<p>innhold...</p>
-
+<p>Mandag - Tirsdag: 10 - 18<br>Onsdag - fresdag: 10 - 20<br>Lørdag - Søndag: 10 - 19</p>
 <br><br>
+
+<h2>Billettpriser:</h2>
+<p>Voksen: kr 120<br>Student: kr 100<br> Barn (fra 0 til 16 år): Gratis</p>
+
 
 <h2>Omvisning</h2>
 <ul style="text-align: left; color: green;">
-    <li>språk1</li>
-    <li>språk2</li>
+    <li>Norsk</li>
+    <li>Engelsk</li>
 </ul>
 
 <br><br><br><br><br><br><br><br><br><br><br>
