legg til flere bilder

--- a/aapningstid_og_omvisning.html
+++ b/aapningstid_og_omvisning.html
@@ -22,22 +22,19 @@
     </div>
 </div>
 <hr>
-
+<img src="billet.jpg" alt="skulptur" style="float:right; width: 400px; height: 500px; padding-right: 5%; padding-top: 2%">
 <h2>Åpningstider</h2>
 <p>Mandag - Tirsdag: 10 - 18<br>Onsdag - fresdag: 10 - 20<br>Lørdag - Søndag: 10 - 19</p>
-<br><br>
 
 <h2>Billettpriser:</h2>
 <p>Voksen: kr 120<br>Student: kr 100<br> Barn (fra 0 til 16 år): Gratis</p>
 
-
 <h2>Omvisning</h2>
-<ul style="text-align: left; color: green;">
-    <li>Norsk</li>
-    <li>Engelsk</li>
-</ul>
+<p>Norsk<br>Engelsk</p>
+
 
 <br><br><br><br><br><br><br><br><br><br><br>
+
 
 <div id="footer">
     <hr>
