--- a/submission.html
+++ b/submission.html
@@ -1,4 +1,32 @@
 <!DOCTYPE html>
 <html>
-    
+    <link rel="stylesheet" href="index-css.css">
+<head>
+    <meta charset="UTF-8">
+    <title>Tussudal Bydgeuseum</title> <!--tab's name-->
+</head>
+
+<body>
+<h1>Tussudal Bydgemuseum</h1>
+
+<!--menu bar-->
+<div id="header">
+    <div class="topnav">
+        <a href="index.html">Hjem</a>
+        <a href="utstillinger.html">Utstillinger</a>
+        <a href="nettutstilling.html">Nettutstilling</a>
+        <a href="aapningstid_og_omvisning.html">Åpningstider og Omvisning</a>
+        <a href="kontakt.html">Kontakt</a>
+        <a href="om_oss.html">Om oss</a>
+        <a href="soek.html">Søk</a>
+    </div>
+</div>
+<hr>
+
+<p>funksjonen fungerer ikke...</p>
+<br><br><br><br><br><br><br><br><br><br><br>
+<div id="footer">
+    <hr>
+    <h5>Copyright &#169; 2022 Tussudal Museum</h5><br> 
+</div>
 </html>
