--- a/kontakt.html
+++ b/kontakt.html
@@ -31,6 +31,7 @@
 <h3>Epost</h3>
 <p>post@tussudalbygemuseum.no</p>
 <br>
+<img src="3.jpg" alt="bydg" style="float:right; width: 30%; height: 20%; padding-right: 5%; padding-top: 2%;">
 <h3>Adresse</h3>
 <p>Tussudal Gate 36, 6363 Trondheim</p> 
 <p><a href="https://www.google.com/maps/@63.4339642,10.3422412,16.33z" target="_blank">Her får du kartet.</a></p>
