--- a/om_oss.html
+++ b/om_oss.html
@@ -24,8 +24,9 @@
 <hr>
 
 <!--content-->
+<img src="2.jpg" alt="bydg" style="float:right; width: 30%; height: 20%; padding-right: 5%; padding-top: 2%;">
 <h2>Formål</h2>
-<p>innhold...</p>
+<p style="z-index: 2;">innhold...</p>
 
 <br><br>
 
