--- a/soek.html
+++ b/soek.html
@@ -23,7 +23,7 @@
     </div>
 </div>
 <hr>
-
+<img src="soek.jpg" alt="møbler" style="float:right; width: 300px; height: 420px; padding-right: 5%; padding-top: 5%;">
 <h2>Søk</h2>
 
 <form action="submission.html" method="POST">
