--- a/om_oss.html
+++ b/om_oss.html
@@ -24,24 +24,24 @@
 <hr>
 
 <!--content-->
-<img src="2.jpg" alt="bydg" style="float:right; width: 30%; height: 20%; padding-right: 5%; padding-top: 2%;">
-<h2>Formål</h2>
-<p style="z-index: 2;">innhold...</p>
-
-<br><br>
-
-<h2>Virke</h2>
-<p>innhold...</p>
-
-<br><br>
-
-<h2>Historie</h2>
-<p>innhold...</p>
-
+<div class="grid-container-om-oss">
+    <div class="grid-item-om-oss">
+        <h2>Formål og Virke</h2>
+        <p>Tussudal Bygdemuseum er et bygdemuseum i Tusse kommune. Vi ivaretar 6 historiske bygninger som gjenspeiler den lokale byggeskikken i Tusse kommune fra tidlig 1700-tallet og frem til 1950-åra. I bygningene finner vi utstillinger med kulturhistoriske gjenstander og vi har også en lokal fotoutstilling som dokumenterer livet i bygda fra slutten av 1800-tallet og frem til i dag. Tussudal Bygdemuseum skal være et museum som skal ta vare på historien og formidle kunnskap ut til samfunnet. <br> Hovedarbeidet til museet har vært å renovere og vedlikeholde bygningsmassene. For å få til dette kreves det mye frivillig arbeid og dugnad. Museet er helt avhengig av donasjoner og hjelp fra ildsjeler for å kunne holde driften i gang. Vi inviterer bl.a. barnehager, skoler, pensjonistforeninger og andre institusjoner i bygda til å være med på aktiviteter på museet.</p>
+        <br><br>
+    </div>
+    <div class="grid-item-om-oss">
+        <img src="2.jpg" alt="bydg" style="width: 300px; text-align: center; padding-left: 2%; padding-top: 25%;">
+    </div>
+    <div class="grid-item-om-oss">
+        <h2>Historie</h2>
+        <p>Tussudal bygdemuseum ivaretar en spennende historie som spenner seg 2000 år tilbake i tid. Gamle gårdsnavn som Utgard, Tussegard og Jutulgard rundt bygdemuseet tyder på at det har vært drevet kontinuerlig jordbruk i bygda i over 2000 år. I den kulturhistoriske samlingen er de eldste gjenstandene kvartsbryner fra folkevandringstiden. Det som kanskje er den mest populære trekkplasteret på museet er en runesteinsbauta med inskripsjoner som ingen har kunnet tyde ennå. Mystiske tegninger fra en glemt tid er risset inn sammen med de urnordiske runene. Steinen er datert til rundt år 500 e.kr. <br> Fra vikingtiden har vi i samlingene våre et godt bevart Hnefatafl-brett med hvalrosstann-brikker som også er funnet i bygda. Tussudalen ble nok mest sannsynlig lagt øde under Svartedauden. De første opptegnelsene fra historiske kilder finner vi i en bevart kirkebok fra 1500-tallet. Innbyggertallet i bygda var da på 150 med stort og smått. I samlingen har vi en rekke gjenstander fra den kjente treskjærerfamilien Tussefløte som har virket i århundrer i bygda. Den eldste bygningen er fra 1720-tallet og er det gamle våningsbygget på Tussegard. andre bygninger vi har her er flyttet hit fra omkringliggende gårder. <br> Museet ble startet i 1911 av Tussudals fortidsminneforening med den hensikt å bevare bygdas historie.</p>
+    </div>
+    <div class="grid-item-om-oss">
+        <img src="1.jpg" alt="bydg" style="width: 300px; text-align: center; padding-left: 2%; padding-top: 25%">
+    </div>
+</div>
 </body>
-
-<br><br><br><br><br><br><br><br><br><br><br>
-
 <div id="footer">
     <hr>
     <h5>Copyright &#169; 2022 Tussudal Museum</h5><br> 
