--- a/soek.html
+++ b/soek.html
@@ -23,29 +23,39 @@
     </div>
 </div>
 <hr>
-<img src="soek.jpg" alt="møbler" style="float:right; width: 300px; height: 420px; padding-right: 5%; padding-top: 5%;">
-<h2>Søk</h2>
 
-<form action="submission.html" method="POST">
-    <div class="searchbar" style="text-align: left;">
-        <label for="search">Søk her: </label>
-        <input type="search" list="search" size="40" placeholder="velg fra listen eller skriv nøkkelord" required>
-        <datalist id="search">
-            <option value="Hjem"></option>
-            <option value="Utstillinger"></option>
-            <option value="Nettutstillinger"></option>
-            <option value="Åpningstider"></option>
-            <option value="Omvisning"></option>
-            <option value="Kontakt oss"></option>
-            <option value="Om oss"></option>
-            <option value="Gjenstander"></option>
-        </datalist>
-        <input type="submit" value="submit">
+<div class="grid-container-soek">
+    <div class="grid-item-soek">
+        <h2>Søk</h2>
+            <form action="submission.html" method="POST">
+                <div class="searchbar" style="text-align: left; padding-left: 5%;">
+                    <label for="search">Søk her: </label>
+                    <input type="search" list="search" size="40" placeholder="velg fra listen eller skriv nøkkelord" required>
+                    <datalist id="search">
+                        <option value="Hjem"></option>
+                        <option value="Utstillinger"></option>
+                        <option value="Nettutstillinger"></option>
+                        <option value="Åpningstider"></option>
+                        <option value="Omvisning"></option>
+                        <option value="Kontakt oss"></option>
+                        <option value="Om oss"></option>
+                        <option value="Gjenstander"></option>
+                    </datalist>
+                    <input type="submit" value="submit">
+                </div>
+            </form>
     </div>
-</form>
+    <div class="grid-item-soek">
+        <img src="soek.jpg" alt="bydg" style="float:right; width: 250px; padding-right: 5%; padding-top: 5%;">
+    </div>
+</div>
+
+<h2></h2>
+
+
 
 </body>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br>
 
 
 <div id="footer">
