Oppdatert nettutstilling.html og gjenstand1-3, 5-8.html

--- a/gjenstand1.html
+++ b/gjenstand1.html
@@ -23,9 +23,9 @@
 </div>
 <hr>
 
-<h2>Gjenstand 1</h2>
-<img src="g1.jpg" alt="gjenstand1" style="width: 50%;">
-<p style="padding-left: 10%; padding-right: 10%;">beskrivelse...</p>
+<h2>Spinnerokk</h2>
+<img src="g1.jpg" alt="spinnerokk" width="50%">
+<p style="padding-left: 10%; padding-right: 10%;">Dette er en spinnerokk med skrått bryst, fra slutten av 1700-tallet. Disse ble brukt til å spinne ull eller lin. Tussudal bygdemuseum gir en lett gjennomgang av hvordan man spant ull i gamledager, der vi har tilrettelagt en litt mer moderne versjon av spinnerokkene for besøkende å prøve.</p>
 <form>
     <br>
     <label for="comment1">Kommentar: </label>
