--- a/gjenstand3.html
+++ b/gjenstand3.html
@@ -23,9 +23,9 @@
 </div>
 <hr>
 
-<h2>Gjenstand 3</h2>
-<img src="g3.jpg" alt="gjenstand3" style="width: 50%;">
-<p style="padding-left: 10%; padding-right: 10%;">beskrivelse...</p>
+<h2>Kiste</h2>
+<img src="g3.jpg" alt="kiste" width="50%">
+<p style="padding-left: 10%; padding-right: 10%;">I ett av de eldre byggene kan man se denne nydelige kisten, som er estimert til å være fra 1600-tallet. Den har trolig blitt kjøpt av en av de rikere familiene fra Tussudal, der kisten er eldre enn det eldste huset i Tussudalen. Denne typen kiste blir kalt teppekiste, eller «blanket chest», og ble ofte brukt av ugifte kvinner for å ivareta gjenstander.</p>
 <form>
     <br>
     <label for="comment3">Kommentar: </label>
