--- a/gjenstand4.html
+++ b/gjenstand4.html
@@ -24,7 +24,7 @@
 <hr>
 
 <h2>Gjenstand 4</h2>
-<img src="g4.jpg" alt="gjenstand4" style="width: 50%;">
+<img src="g4.jpg" alt="gjenstand4" width="50%">
 <p style="padding-left: 10%; padding-right: 10%;">beskrivelse...</p>
 <form>
     <br>
