--- a/gjenstand5.html
+++ b/gjenstand5.html
@@ -24,7 +24,7 @@
 <hr>
 
 <h2>Gjenstand 5</h2>
-<img src="g5.jpg" alt="gjenstand5" style="width: 50%;">
+<img src="g5.jpg" alt="gjenstand5" width="50%">
 <p style="padding-left: 10%; padding-right: 10%;">beskrivelse...</p>
 <form>
     <br>
