--- a/gjenstand6.html
+++ b/gjenstand6.html
@@ -23,9 +23,9 @@
 </div>
 <hr>
 
-<h2>Gjenstand 6</h2>
-<img src="g6.jpg" alt="gjenstand6" style="width: 50%;">
-<p style="padding-left: 10%; padding-right: 10%;">beskrivelse...</p>
+<h2>Ferguson TE20</h2>
+<img src="g6.jpg" alt="Ferguson TE20" width="50%">
+<p style="padding-left: 10%; padding-right: 10%;">En litt mer moderne side av historien i Tussudal er denne Ferguson TE20, også kjent som en «Gråtass». Den var eid av storbonden, og var det første motoriserte kjøretøyet som ble eid på gården. Denne modellen er fra 1955.</p>
 <form>
     <br>
     <label for="comment6">Kommentar: </label>
