--- a/gjenstand7.html
+++ b/gjenstand7.html
@@ -23,9 +23,9 @@
 </div>
 <hr>
 
-<h2>Gjenstand 6</h2>
-<img src="g7.jpg" alt="gjenstand7" style="width: 50%;">
-<p style="padding-left: 10%; padding-right: 10%;">beskrivelse...</p>
+<h2>Seterhus</h2>
+<img src="g7.jpg" alt="seterhus" width="50%">
+<p style="padding-left: 10%; padding-right: 10%;">Dette er et gammeldags seterhus som ble brukt på midten av 1800-tallet. Der brukte man å passe på dyra rundt i beitet, og man kunne lake smør og ost av melka inni seterhusene imens man var og passet på dyrene ute på setra. Denne seterbygningen ble flyttet til Tussudal-museet i 2017, etter mange år med planlegging, for vi ville verken restaureres eller ødelegge bygget.</p>
 <form>
     <br>
     <label for="comment7">Kommentar: </label>
