--- a/gjenstand8.html
+++ b/gjenstand8.html
@@ -23,9 +23,9 @@
 </div>
 <hr>
 
-<h2>Gjenstand 6</h2>
-<img src="g8.jpg" alt="gjenstand8" style="width: 50%;">
-<p style="padding-left: 10%; padding-right: 10%;">beskrivelse...</p>
+<h2>Hesteplog</h2>
+<img src="g8.jpg" alt="hesteplog" width="50%">
+<p style="padding-left: 10%; padding-right: 10%;">Dette er en gammel hesteplog, og var det man brukte før i tiden på gårdene for å pløye jorden før man sådde det man skulle plante.</p>
 <form>
     <br>
     <label for="comment8">Kommentar: </label>
