--- a/gjenstand2.html
+++ b/gjenstand2.html
@@ -23,9 +23,9 @@
 </div>
 <hr>
 
-<h2>Gjenstand 2</h2>
-<img src="g2.jpg" alt="gjenstand2" style="width: 50%;">
-<p style="padding-left: 10%; padding-right: 10%;">beskrivelse...</p>
+<h2>Utskjæring i stokk</h2>
+<img src="g2.jpg" alt="Utskjæring" width="50%">
+<p style="padding-left: 10%; padding-right: 10%;">Denne vakre utskjæringen ble funnet i teppekisten i det eldste bygget i Tussudal. Det ser ut til å være en bit et møbel i fra barokken. Barokken var en tid innenfor kunsten, mellom 1600-1700 tallet, og var kjent for vakre utskjæringer og dekorerte møbler.</p>
 <form>
     <br>
     <label for="comment2">Kommentar: </label>
