--- a/nettutstilling.html
+++ b/nettutstilling.html
@@ -27,41 +27,41 @@
 
 <!--photo grid with different museumobjects--> <!--HUSK å SKRIVE INN BESRKIVELSER TIL ALLE GJENSTANDENE-->
 <!--in order to add description in each picture, every picture has its own container-->
-<div class="row"> 
+<div class="row" style="padding-left: 5%; padding-right: 5%;"> 
     <div class="column"> <!--column to the left, from top to buttom-->
         <div class="container1" style="position: relative; text-align: center;">
-            <img src="4.jpg" alt="description" style="width:100%"> 
-            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand1.html" target="_blank" style="color: white;">Gjenstand 1</a></div> <!--can insert a link on the description to start a new page about the object-->
+            <img src="g1.jpg" alt="spinnerokk" style="width:100%"> 
+            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand1.html" target="_blank" style="color: white;">Spinnerokk</a></div> <!--can insert a link on the description to start a new page about the object-->
         </div>
         <div class="container2" style="position: relative; text-align: center;">
-            <img src="2.jpg" alt="description" style="width:100%">
-            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand2.html" target="_blank" style="color: white;">Gjenstand 2</a></div>
+            <img src="g2.jpg" alt="Utskjæring" style="width:100%">
+            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand2.html" target="_blank" style="color: white;">Utskjæring</a></div>
         </div>
         <div class="container1" style="position: relative; text-align: center;">
-            <img src="3.jpg" alt="description" style="width:100%">
-            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand3.html" target="_blank" style="color: white;">Gjenstand 3</a></div>
+            <img src="g3.jpg" alt="kiste" style="width:100%">
+            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand3.html" target="_blank" style="color: white;">Kiste</a></div>
         </div>
         <div class="container2" style="position: relative; text-align: center;">
-            <img src="1.jpg" alt="description" style="width:100%">
+            <img src="g4.jpg" alt="description-tomt" style="width:100%">
             <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand4.html" target="_blank" style="color: white;">Gjenstand 4</a></div>
         </div>
     </div>
     <div class="column"> <!--column to the right, from top to buttom-->
         <div class="container1" style="position: relative; text-align: center;">
-            <img src="2.jpg" alt="description" style="width:100%"> 
+            <img src="g5.jpg" alt="description-tomt" style="width:100%"> 
             <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand5.html" target="_blank" style="color: white;">Gjenstand 5</a></div>
         </div>
         <div class="container2" style="position: relative; text-align: center;">
-            <img src="1.jpg" alt="description" style="width:100%">
-            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand6.html" target="_blank" style="color: white;">Gjenstand 6</a></div>
+            <img src="g6.jpg" alt="Ferguson TE20" style="width:100%">
+            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand6.html" target="_blank" style="color: white;">Ferguson TE20</a></div>
         </div>
         <div class="container1" style="position: relative; text-align: center;">
-            <img src="3.jpg" alt="description" style="width:100%"> 
-            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand7.html" target="_blank" style="color: white;">Gjenstand 7</a></div>
+            <img src="g7.jpg" alt="seterhus" style="width:100%"> 
+            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand7.html" target="_blank" style="color: white;">Seterhus</a></div>
         </div>
         <div class="container2" style="position: relative; text-align: center;">
-            <img src="4.jpg" alt="description" style="width:100%">
-            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand8.html" target="_blank" style="color: white;">Gjenstand 8</a></div>
+            <img src="g8.jpg" alt="hesteplog" style="width:100%">
+            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand8.html" target="_blank" style="color: white;">Hesteplog</a></div>
         </div>
     </div>
 </div>
