--- a/om_oss.html
+++ b/om_oss.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="index-css.css">
 <head>
     <meta charset="UTF-8">
-    <title>Tussudal Bydgeuseum</title> <!--tab's name-->
+    <title>Tussudal Bydgeuseum</title> <!--tabs navn-->
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 </div>
 <hr>
 
-<!--content-->
+<!--content; gridcontainer er brukt for å ordne to bilder-->
 <div class="grid-container-om-oss">
     <div class="grid-item-om-oss">
         <h2>Formål og Virke</h2>
