--- a/kontakt.html
+++ b/kontakt.html
@@ -25,13 +25,13 @@
 
 <!--content-->
 <h2>Kontakt</h2>
+<img src="3.jpg" alt="bydg" style="float:right; width: 400px; height: 320px; padding-right: 5%; padding-top: 2%;">
 <h3>Telefon nummer</h3>
 <p>+47 3663 6336</p>
 <br>
 <h3>Epost</h3>
 <p>post@tussudalbygemuseum.no</p>
 <br>
-<img src="3.jpg" alt="bydg" style="float:right; width: 30%; height: 20%; padding-right: 5%; padding-top: 2%;">
 <h3>Adresse</h3>
 <p>Tussudal Gate 36, 6363 Trondheim</p> 
 <p><a href="https://www.google.com/maps/@63.4339642,10.3422412,16.33z" target="_blank">Her får du kartet.</a></p>
