--- a/nettutstilling.html
+++ b/nettutstilling.html
@@ -24,33 +24,39 @@
 <hr>
 
 <h2>Nettutstilling</h2>
-
-<!--photo grid with different museumobjects--> <!--HUSK å SKRIVE INN BESRKIVELSER TIL ALLE GJENSTANDENE-->
-<!--in order to add description in each picture, every picture has its own container-->
+<p>Her finner du flere viktige gjenstander som tilhører til vår faste utstilling.</p>
+<!--For å få navn og link i hvert bilde, er det lagt en container til hvert bilde-->
 <div class="row" style="padding-left: 5%; padding-right: 5%;"> 
     <div class="column"> <!--column to the left, from top to buttom-->
+        <br>
         <div class="container1" style="position: relative; text-align: center;">
             <img src="g1.jpg" alt="spinnerokk" style="width:100%"> 
             <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand1.html" target="_blank" style="color: white;">Spinnerokk</a></div> <!--can insert a link on the description to start a new page about the object-->
         </div>
+        <br>
         <div class="container2" style="position: relative; text-align: center;">
             <img src="g2.jpg" alt="Utskjæring" style="width:100%">
             <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand2.html" target="_blank" style="color: white;">Utskjæring</a></div>
         </div>
+        <br>
         <div class="container1" style="position: relative; text-align: center;">
             <img src="g3.jpg" alt="kiste" style="width:100%">
             <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand3.html" target="_blank" style="color: white;">Kiste</a></div>
         </div>
+        <!--vi planlagte 8 gjenstander, men fant bare 6, so 2 av dem har blitt en del av kommentaren
         <div class="container2" style="position: relative; text-align: center;">
             <img src="g4.jpg" alt="description-tomt" style="width:100%">
             <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand4.html" target="_blank" style="color: white;">Gjenstand 4</a></div>
         </div>
+        -->
     </div>
     <div class="column"> <!--column to the right, from top to buttom-->
+        <!--vi planlagte 8 gjenstander, men fant bare 6, so 2 av dem har blitt en del av kommentaren
         <div class="container1" style="position: relative; text-align: center;">
             <img src="g5.jpg" alt="description-tomt" style="width:100%"> 
             <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand5.html" target="_blank" style="color: white;">Gjenstand 5</a></div>
         </div>
+        -->
         <div class="container2" style="position: relative; text-align: center;">
             <img src="g6.jpg" alt="Ferguson TE20" style="width:100%">
             <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand6.html" target="_blank" style="color: white;">Ferguson TE20</a></div>
