--- a/utstillinger.html
+++ b/utstillinger.html
@@ -38,6 +38,7 @@
         <img src="1.jpg" style="width: 50%; padding:5%">
         <h4>Utstillingsnavn1</h4>
         <p>innhold...</p>
+        <p>Klikk <a href="nettutstilling.html">her</a> for å få noen blikk til utstillingen</p>
     </div>  
     
     <div class="grid-item"></div> <!--empty grid-->
