Tilsatt googlemap i Kontakt.html

--- a/kontakt.html
+++ b/kontakt.html
@@ -24,8 +24,8 @@
 <hr>
 
 <!--content-->
+<img src="3.jpg" alt="bydg" style="float:right; width: 400px; height: 300px; padding-right: 5%; padding-top: 2%;">
 <h2>Kontakt</h2>
-<img src="3.jpg" alt="bydg" style="float:right; width: 400px; height: 320px; padding-right: 5%; padding-top: 2%;">
 <h3>Telefon nummer</h3>
 <p>+47 3663 6336</p>
 <br>
@@ -34,10 +34,9 @@
 <br>
 <h3>Adresse</h3>
 <p>Tussudal Gate 36, 6363 Trondheim</p> 
-<p><a href="https://www.google.com/maps/@63.4339642,10.3422412,16.33z" target="_blank">Her får du kartet.</a></p>
-<br>
+<!-- hvis jeg bare har "align="left" i iframe, er det "float". Derfor tilsetter jeg hele iframe innenfor en <p> med align="left"-->
+<p align="left"><iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3568.7246445591404!2d10.3422412!3d63.4339642!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sno!4v1649146975549!5m2!1sen!2sno" width="510" height="360" style="border: 1px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 
-<br><br><br><br><br><br><br><br><br><br><br>
 
 <div id="footer">
     <hr>
