--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <link rel="stylesheet" href="index-css.css">
 <head>
   <meta charset="UTF-8">
-  <title>Tussudal Bydgeuseum</title> <!--tab's name-->
+  <title>Tussudal Bygdemuseum</title>
 </head>
 
 
 <body>
-<h1>Tussudal Bydgemuseum</h1>
+<h1>Tussudal Bygdemuseum</h1>
 <p></p>
 
 <!--menu bar--> <!--kan prøve med id="header" for å lage en felles header-->
@@ -23,8 +23,10 @@
 </div>
 <hr>
 <div class="container1" style="position: relative; text-align: center;">
-  <img src="index2.png" alt="velkomstside" style="width:100%"> 
-  <div class="bottom-left-text1" style="position: absolute; bottom: 22%; right:18%"><a href="om_oss.html" target="_blank" style="color: white; font-size: 20px;">Les mer</a></div> <!--can insert a link on the description to start a new page about the object-->
+  <img src="index.png" alt="velkomstside" style="width:100%">
+  <div class="bottom-right-text1" style="position: absolute; bottom: 40%; right:18%; color: white; font-size: xx-large">VELKOMMEN TIL TUSSUDAL BYGDEMUSEUM</div>
+  <div class="bottom-right-text2" style="position: absolute; bottom: 30%; right:18%; color: white; font-size: large">Vi inviterer til en vandring i Tussudals bygdehistorie.</div> 
+  <div class="bottom-right-text3" style="position: absolute; bottom: 22%; right:18%"><a href="om_oss.html" target="_blank" style="color: white; font-size: large;">Les mer</a></div> <!--can insert a link on the description to start a new page about the object-->
 </div>
 
 <!--slideshow-->
