--- a/index1.html
+++ b/index1.html
@@ -3,12 +3,12 @@
   <link rel="stylesheet" href="index-css.css">
 <head>
   <meta charset="UTF-8">
-  <title>Tussudal Bydgeuseum</title> <!--tab's name-->
+  <title>Tussudal Bygdemuseum</title>
 </head>
 
 
 <body>
-<h1>Tussudal Bydgemuseum</h1>
+<h1>Tussudal Bygdemuseum</h1>
 <p></p>
 
 <!--menu bar--> <!--kan prøve med id="header" for å lage en felles header-->
