--- a/om_oss.html
+++ b/om_oss.html
@@ -3,11 +3,11 @@
     <link rel="stylesheet" href="index-css.css">
 <head>
     <meta charset="UTF-8">
-    <title>Tussudal Bydgeuseum</title> <!--tabs navn-->
+    <title>Tussudal Bygdemuseum</title>
 </head>
 
 <body>
-<h1>Tussudal Bydgemuseum</h1>
+<h1>Tussudal Bygdemuseum</h1>
 
 <!--menu bar-->
 <div id="header">
