--- a/nettutstilling.html
+++ b/nettutstilling.html
@@ -3,11 +3,11 @@
     <link rel="stylesheet" href="index-css.css">
 <head>
     <meta charset="UTF-8">
-    <title>Tussudal Bydgeuseum</title> <!--tab's name-->
+    <title>Tussudal Bygdemuseum</title>
 </head>
 
 <body>
-<h1>Tussudal Bydgemuseum</h1>
+<h1>Tussudal Bygdemuseum</h1>
 
 <!--menu bar-->
 <div id="header">
@@ -28,17 +28,17 @@
 <!--For å få navn og link i hvert bilde, er det lagt en container til hvert bilde-->
 <div class="row" style="padding-left: 5%; padding-right: 5%;"> 
     <div class="column"> <!--column to the left, from top to buttom-->
-        <div class="container1" style="position: relative; text-align: center;">
-            <img src="g1.jpg" alt="spinnerokk" style="width:100%"> 
-            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand1.html" target="_blank" style="color: white;">Spinnerokk</a></div> <!--can insert a link on the description to start a new page about the object-->
+        <div class="container1" style="position: relative;">
+            <img src="g1.jpg" alt="spinnerokk" style="width:80%"> 
+            <div class="bottom-left-text" style="position: absolute; bottom: 5%; left: 15%; font-size: large"><a href="gjenstand1.html" target="_blank" style="color: white;">Spinnerokk</a></div> <!--can insert a link on the description to start a new page about the object-->
         </div>
-        <div class="container2" style="position: relative; text-align: center;">
-            <img src="g2.jpg" alt="Utskjæring" style="width:100%">
-            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand2.html" target="_blank" style="color: white;">Utskjæring</a></div>
+        <div class="container2" style="position: relative;">
+            <img src="g2.jpg" alt="Utskjæring" style="width:80%">
+            <div class="bottom-left-text" style="position: absolute; bottom: 5%; left: 15%; font-size: large"><a href="gjenstand2.html" target="_blank" style="color: white;">Utskjæring</a></div>
         </div>
-        <div class="container1" style="position: relative; text-align: center;">
-            <img src="g3.jpg" alt="kiste" style="width:100%">
-            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand3.html" target="_blank" style="color: white;">Kiste</a></div>
+        <div class="container1" style="position: relative;">
+            <img src="g3.jpg" alt="kiste" style="width:80%">
+            <div class="bottom-left-text" style="position: absolute; bottom: 5%; left: 15%; font-size: large"><a href="gjenstand3.html" target="_blank" style="color: white;">Kiste</a></div>
         </div>
         <!--vi planlagte 8 gjenstander, men fant bare 6, so 2 av dem har blitt en del av kommentaren
         <div class="container2" style="position: relative; text-align: center;">
@@ -54,17 +54,17 @@
             <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand5.html" target="_blank" style="color: white;">Gjenstand 5</a></div>
         </div>
         -->
-        <div class="container2" style="position: relative; text-align: center;">
-            <img src="g6.jpg" alt="Ferguson TE20" style="width:100%">
-            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand6.html" target="_blank" style="color: white;">Ferguson TE20</a></div>
+        <div class="container2" style="position: relative;">
+            <img src="g6.jpg" alt="Ferguson TE20" style="width:80%">
+            <div class="bottom-left-text" style="position: absolute; bottom: 5%; left: 15%; font-size: large"><a href="gjenstand6.html" target="_blank" style="color: white;">Ferguson TE20</a></div>
         </div>
-        <div class="container1" style="position: relative; text-align: center;">
-            <img src="g7.jpg" alt="seterhus" style="width:100%"> 
-            <div class="bottom-left-text1" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand7.html" target="_blank" style="color: white;">Seterhus</a></div>
+        <div class="container1" style="position: relative;">
+            <img src="g7.jpg" alt="seterhus" style="width:80%"> 
+            <div class="bottom-left-text" style="position: absolute; bottom: 5%; left: 15%; font-size: large"><a href="gjenstand7.html" target="_blank" style="color: white;">Seterhus</a></div>
         </div>
-        <div class="container2" style="position: relative; text-align: center;">
-            <img src="g8.jpg" alt="hesteplog" style="width:100%">
-            <div class="bottom-left-text2" style="position: absolute; bottom: 8px; left: 16px"><a href="gjenstand8.html" target="_blank" style="color: white;">Hesteplog</a></div>
+        <div class="container2" style="position: relative;">
+            <img src="g8.jpg" alt="hesteplog" style="width:80%">
+            <div class="bottom-left-text" style="position: absolute; bottom: 5%; left: 15%; font-size: large;"><a href="gjenstand8.html" target="_blank" style="color: white;">Hesteplog</a></div>
         </div>
     </div>
 </div>
