--- a/gjenstand2.html
+++ b/gjenstand2.html
@@ -30,7 +30,7 @@
     <br>
     <label for="comment2">Kommentar: </label>
     <br>
-    <textarea id="comment2" name="comment2" rows="5" cols="50" required>Skriv inn kommentar</textarea>
+    <textarea id="comment2" name="comment2" rows="5" cols="50" required>Skriv en kommentar på objektet.</textarea>
     <br>
     <input type="submit" value="submit">
 </form>
