--- a/gjenstand3.html
+++ b/gjenstand3.html
@@ -30,7 +30,7 @@
     <br>
     <label for="comment3">Kommentar: </label>
     <br>
-    <textarea id="comment3" name="comment3" rows="5" cols="50" required>Skriv inn kommentar</textarea>
+    <textarea id="comment3" name="comment3" rows="5" cols="50" required>Skriv en kommentar på objektet.</textarea>
     <br>
     <input type="submit" value="submit">
 </form>
