--- a/gjenstand6.html
+++ b/gjenstand6.html
@@ -30,7 +30,7 @@
     <br>
     <label for="comment6">Kommentar: </label>
     <br>
-    <textarea id="comment6" name="comment6" rows="5" cols="50" required>Skriv inn kommentar</textarea>
+    <textarea id="comment6" name="comment6" rows="5" cols="50" required>Skriv en kommentar på objektet.</textarea>
     <br>
     <input type="submit" value="submit">
 </form>
