--- a/gjenstand7.html
+++ b/gjenstand7.html
@@ -30,7 +30,7 @@
     <br>
     <label for="comment7">Kommentar: </label>
     <br>
-    <textarea id="comment7" name="comment7" rows="5" cols="50" required>Skriv inn kommentar</textarea>
+    <textarea id="comment7" name="comment7" rows="5" cols="50" required>Skriv en kommentar på objektet.</textarea>
     <br>
     <input type="submit" value="submit">
 </form>
