--- a/gjenstand8.html
+++ b/gjenstand8.html
@@ -30,7 +30,7 @@
     <br>
     <label for="comment8">Kommentar: </label>
     <br>
-    <textarea id="comment8" name="comment8" rows="5" cols="50" required>Skriv inn kommentar</textarea>
+    <textarea id="comment8" name="comment8" rows="5" cols="50" required>Skriv en kommentar på objektet.</textarea>
     <br>
     <input type="submit" value="submit">
 </form>
