endring på footer

--- a/kontakt.html
+++ b/kontakt.html
@@ -30,7 +30,7 @@
 <p>+47 3663 6336</p>
 <br>
 <h3>Epost</h3>
-<p>post@tussudalbygemuseum.no</p>
+<p>post@tussudalbygdemuseum.no</p>
 <br>
 <h3>Adresse</h3>
 <p>Tussudal Gate 36, 6363 Trondheim</p> 
@@ -40,7 +40,7 @@
 
 <div id="footer">
     <hr>
-    <h5>Copyright &#169; 2022 Tussudal Museum</h5><br> 
+    <h5>Copyright &#169; 2022 Tussudal Bygdemuseum</h5><br> 
 </div>
 
 </html>
