--- a/nettutstilling.html
+++ b/nettutstilling.html
@@ -73,7 +73,7 @@
 
 <div id="footer">
     <hr>
-    <h5>Copyright &#169; 2022 Tussudal Museum</h5><br> 
+    <h5>Copyright &#169; 2022 Tussudal Bygdemuseum</h5><br> 
 </div>
 
 </html>
