--- a/soek.html
+++ b/soek.html
@@ -3,11 +3,11 @@
     <link rel="stylesheet" href="index-css.css">
 <head>
     <meta charset="UTF-8">
-    <title>Tussudal Bydgeuseum</title> <!--tab's name-->
+    <title>Tussudal Bygdemuseum</title>
 </head>
 
 <body>
-<h1>Tussudal Bydgemuseum</h1>
+<h1>Tussudal Bygdemuseum</h1>
 <p></p>
 
 <!--menu bar-->
@@ -60,7 +60,7 @@
 
 <div id="footer">
     <hr>
-    <h5>Copyright &#169; 2022 Tussudal Museum</h5><br> 
+    <h5>Copyright &#169; 2022 Tussudal Bygdemuseum</h5><br> 
 </div>
 
 </html>
