--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function showSlides() {
 <!--footer-->
 <div id="footer">
   <hr>
-  <h5>Copyright &#169; 2022 Tussudal Museum</h5><br> 
+  <h5>Copyright &#169; 2022 Tussudal Bygdemuseum</h5><br> 
 </div>
 
 </html> 
