--- a/om_oss.html
+++ b/om_oss.html
@@ -44,7 +44,7 @@
 </body>
 <div id="footer">
     <hr>
-    <h5>Copyright &#169; 2022 Tussudal Museum</h5><br> 
+    <h5>Copyright &#169; 2022 Tussudal Bygdemuseum</h5><br> 
 </div>
 
 </html>
