--- a/submission.html
+++ b/submission.html
@@ -27,6 +27,6 @@
 <br><br><br><br><br><br><br><br><br><br><br>
 <div id="footer">
     <hr>
-    <h5>Copyright &#169; 2022 Tussudal Museum</h5><br> 
+    <h5>Copyright &#169; 2022 Tussudal Bygdemuseum</h5><br> 
 </div>
 </html>
