--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <img src="index.png" alt="velkomstside" style="width:100%">
   <div class="bottom-right-text1" style="position: absolute; bottom: 40%; right:18%; color: white; font-size: xx-large">VELKOMMEN TIL TUSSUDAL BYGDEMUSEUM</div>
   <div class="bottom-right-text2" style="position: absolute; bottom: 30%; right:18%; color: white; font-size: large">Vi inviterer til en vandring i Tussudals bygdehistorie.</div> 
-  <div class="bottom-right-text3" style="position: absolute; bottom: 22%; right:18%"><a href="om_oss.html" target="_blank" style="color: white; font-size: large;">Les mer</a></div> <!--can insert a link on the description to start a new page about the object-->
+  <div class="bottom-right-text3" style="position: absolute; bottom: 22%; right:18%"><a href="om_oss.html" style="color: white; font-size: large;">Les mer</a></div> <!--can insert a link on the description to start a new page about the object-->
 </div>
 
 <!--slideshow-->
