--- a/kontakt.html
+++ b/kontakt.html
@@ -33,9 +33,9 @@
 <p>post@tussudalbygdemuseum.no</p>
 <br>
 <h3>Adresse</h3>
-<p>Tussudal Gate 36, 6363 Trondheim</p> 
+<p>Tveitavegen 36, 6363 Tusse</p> 
 <!-- hvis jeg bare har "align="left" i iframe, er det "float". Derfor tilsetter jeg hele iframe innenfor en <p> med align="left"-->
-<p align="left"><iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3568.7246445591404!2d10.3422412!3d63.4339642!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sno!4v1649146975549!5m2!1sen!2sno" width="510" height="360" style="border: 1px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+<p align="left"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d532.568997919226!2d6.557988694365439!3d60.11617137022377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sno!4v1649254918326!5m2!1sen!2sno" width="510" height="360" style="border: 1px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 
 
 <div id="footer">
